tests/success/comptime_malloc.bz
function main()
{
	(consteval {
		let p = __builtin_comptime_malloc(int32, 1u);
		__builtin_comptime_free(p);
	});
}
