tests/error/comptime/pointer_arithmetic08.bz
function test()
{
	(consteval {
		const p = __builtin_comptime_malloc(int32, 1);
		defer __builtin_comptime_free(p);
		p - 1;
	});
}
